# flexcache

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BADGES.rst  CHANGES  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint-autoupdate.yml
flexcache/: __init__.py  flexcache.py
flexcache/testsuite/: test_byhash.py  test_bymtime.py  test_custom_diskcache.py  test_header.py
