[project]
name = "flexcache"
description = "Saves and loads to the cache a transformed versions of a source object."
dynamic = ["version"]
authors = [{ name = "Hernan E. Grecco", email = "hernan.grecco@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Topic :: System :: Filesystems",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = ["cache", "optimization", "storage", "disk"]
dependencies = [
  "typing_extensions"
]



[project.urls]
Homepage = "https://github.com/hgrecco/flexcache"
Issues = "https://github.com/hgrecco/flexcache/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pixi.project]
channels = ["https://fast.prefix.dev/conda-forge"]
platforms = ['osx-arm64', 'linux-64', 'win-64']

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.9"

[tool.pixi.pypi-dependencies]
flexcache = { path = ".", editable = true }

[tool.pixi.environments]
lint = { features = ["lint"], no-default-feature = true }
build = { features = ["build"], no-default-feature = true }
test = { features = ["test"], solve-group = "default" }
test-py39 = ["test", "py39"]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
pre-commit-hooks = "*"
taplo = "*"
ruff = "*"
mdformat = "*"
mdformat-ruff = "*"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run"

[tool.pixi.feature.build.dependencies]
uv = "*"

[tool.pixi.feature.build.tasks]
build = "uv build"
publish = "uv publish"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
test = "pytest --doctest-modules"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
